<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_file_provider" translatable="false">io.forstream.fileprovider</string>

  <!-- YouTube -->
  <string name="youtube_error_sign_in">Could not sign in with YouTube, please try again later!</string>

  <!-- Twitch -->
  <string name="twitch_client_id" translatable="false">jf5nuztj2ehwws0oi8cztt8h0338mp</string>
  <string name="twitch_redirect_url" translatable="false">io.forstream.api:/oauth2/twitch</string>
  <string name="twitch_error_sign_in">Could not sign in with Twitch, please try again later!</string>

  <!-- Drawer menu -->
  <string name="menu_open">Open menu</string>
  <string name="menu_close">Close menu</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_share">Share</string>
  <string name="menu_rate_us">Rate us</string>
  <string name="menu_log_out">Log out</string>

  <!-- Menus -->
  <string name="menu_lives">Lives</string>
  <string name="menu_channels">Channels</string>
  <string name="menu_visit_channel">Visit channel</string>
  <string name="menu_remove">Remove</string>

  <!-- Intro activity -->
  <string name="activity_intro_sign_in_with_google">Sign in with Google</string>
  <string name="activity_intro_sign_in_with_facebook">Sign in with Facebook</string>

  <!-- Profile activity -->
  <string name="activity_profile_first_name">First name</string>
  <string name="activity_profile_edit">Edit</string>
  <string name="activity_profile_last_name">Last name</string>
  <string name="activity_profile_edit_photo">Edit photo</string>
  <string name="activity_profile_select_image">Select image</string>
  <string name="activity_profile_image_not_found">Image not found</string>

  <!-- Main activity -->
  <string name="activity_main_share_title">Share Forstream</string>
  <string name="activity_main_share_message">This app is awesome: %1$s</string>
  <string name="activity_main_your_channels">Your channels</string>
  <string name="activity_main_your_lives">Your lives</string>
  <string name="activity_main_connected">Connected</string>
  <string name="activity_main_coming_soon">Coming soon</string>
  <string name="activity_main_channels_get_started">Get started by connecting your favorite channels. Go live simultaneously in every channel you add.</string>
  <string name="activity_main_connect_channels">Connect channels</string>
  <string name="activity_main_no_facebook_page_found">No Facebook page found</string>
  <string name="activity_main_go_live">Go live!</string>
  <string name="activity_main_live_streams_get_started">You\'re ready to go live simultaneously in your favorite channels. This is awesome!</string>
  <string name="activity_main_dialog_remove_connected_channel_title">Are you sure you want to remove this channel?</string>
  <string name="activity_main_dialog_remove_live_stream_title">Are you sure you want to remove this live stream?</string>

  <!-- Create Live Stream bottom sheet -->
  <string name="bottom_sheet_create_live_stream_title">Title</string>
  <string name="bottom_sheet_create_live_stream_description">Description</string>
  <string name="bottom_sheet_create_live_stream_create_live_stream">Create live stream</string>

  <!-- Connect Channel Target bottom sheet -->
  <string name="bottom_sheet_connect_channel_target_select_target">Where do you want to go live?</string>

  <!-- Connect RTMP bottom sheet -->
  <string name="bottom_sheet_connect_rtmp_channel_name">Channel name</string>
  <string name="bottom_sheet_connect_rtmp_channel_name_hint">Platform X</string>
  <string name="bottom_sheet_connect_rtmp_url">RTMP url</string>
  <string name="bottom_sheet_connect_rtmp_url_hint">rtmp://live.example.com/app</string>
  <string name="bottom_sheet_connect_rtmp_stream_key">Stream key</string>
  <string name="bottom_sheet_connect_rtmp_stream_key_hint">Your private stream key</string>

  <!-- Stream statuses -->
  <string name="stream_status_ready">READY</string>
  <string name="stream_status_live">LIVE</string>
  <string name="stream_status_paused">PAUSED</string>
  <string name="stream_status_ended">ENDED</string>

  <!-- Channel alerts -->
  <string name="channel_alert_youtube_enable_live_streaming">Is live streaming enabled on your YouTube channel?</string>
  <string name="channel_alert_youtube_enable_live_streaming_dialog_title">Enable YouTube live streaming</string>
  <string name="channel_alert_youtube_enable_live_streaming_dialog_text_1">Go to https://www.youtube.com/features, find \"Live streaming\" and click on \"Enable\" button.</string>
  <string name="channel_alert_youtube_enable_live_streaming_dialog_text_2">If you haven\'t already, follow the prompts to verify your channel.</string>
  <string name="channel_alert_youtube_enable_live_streaming_dialog_text_3">Enabling your first live stream may take up to 24 hours. Once enabled, you can live stream instantly.</string>

  <!-- Provider stream messages -->
  <string name="provider_stream_message_youtube_live_streaming_not_enabled">Your YouTube channel is not enable for live streaming</string>

  <!-- Errors -->
  <string name="error_unexpected">An unexpected error happened, please try again later.</string>

  <!-- Others -->
  <string name="remove">Remove</string>
  <string name="cancel">Cancel</string>
  <string name="connect">Connect</string>
  <string name="accept">Accept</string>
  <string name="close">Close</string>

</resources>
