<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/primary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:id="@+id/collapsing_toolbar_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:contentScrim="@color/primary"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <LinearLayout
        android:id="@+id/select_user_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_collapseMode="parallax">

        <com.mikepenz.iconics.view.IconicsImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_sm"
          android:contentDescription="@null"
          app:iiv_color="@android:color/white"
          app:iiv_icon="faw-camera"
          app:iiv_size="@dimen/icon_xlg"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/activity_profile_select_image"
          android:textColor="@android:color/white"
          android:textSize="@dimen/text_xxlg"/>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/user_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_collapseMode="parallax">

        <com.mikhaellopez.circularimageview.CircularImageView
          android:id="@+id/user_image"
          android:layout_width="@dimen/image_xxlg"
          android:layout_height="@dimen/image_xxlg"
          android:layout_gravity="center"
          app:civ_border_color="@android:color/white"
          app:civ_border_width="4dp"/>

      </LinearLayout>

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/margin_md">

      <LinearLayout
        android:id="@+id/user_first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xsm"
            android:text="@string/activity_profile_first_name"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary_dark"
            android:textSize="@dimen/text_xsm"/>

          <TextView
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary_dark"
            android:textSize="@dimen/text_xlg"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
          android:id="@+id/edit_first_name_button"
          style="@style/TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/activity_profile_edit"/>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/user_first_name_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/user_first_name_input_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_lg"
          android:layout_weight="1"
          android:hint="@string/activity_profile_first_name">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_first_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.mikepenz.iconics.view.IconicsImageView
          android:id="@+id/save_user_first_name_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_sm"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:clickable="true"
          android:contentDescription="@null"
          android:focusable="true"
          android:padding="@dimen/margin_sm"
          app:iiv_color="@color/primary"
          app:iiv_icon="faw-check"
          app:iiv_size="@dimen/icon_md"/>

        <com.mikepenz.iconics.view.IconicsImageView
          android:id="@+id/cancel_user_first_name_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_sm"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:clickable="true"
          android:contentDescription="@null"
          android:focusable="true"
          android:padding="@dimen/margin_sm"
          app:iiv_color="@color/text_secondary_dark"
          app:iiv_icon="faw-times"
          app:iiv_size="@dimen/icon_md"/>

      </LinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_sm"
        android:layout_marginBottom="@dimen/margin_sm"
        android:background="@color/divider"/>

      <LinearLayout
        android:id="@+id/user_last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xsm"
            android:text="@string/activity_profile_last_name"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary_dark"
            android:textSize="@dimen/text_xsm"/>

          <TextView
            android:id="@+id/user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary_dark"
            android:textSize="@dimen/text_xlg"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
          android:id="@+id/edit_user_last_name_button"
          style="@style/TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/activity_profile_edit"/>

      </LinearLayout>

      <LinearLayout
        android:id="@+id/user_last_name_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/user_last_name_input_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_lg"
          android:layout_weight="1"
          android:hint="@string/activity_profile_last_name">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.mikepenz.iconics.view.IconicsImageView
          android:id="@+id/save_user_last_name_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_sm"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:clickable="true"
          android:contentDescription="@null"
          android:focusable="true"
          android:padding="@dimen/margin_sm"
          app:iiv_color="@color/primary"
          app:iiv_icon="faw-check"
          app:iiv_size="@dimen/icon_md"/>

        <com.mikepenz.iconics.view.IconicsImageView
          android:id="@+id/cancel_user_last_name_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_sm"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:clickable="true"
          android:contentDescription="@null"
          android:focusable="true"
          android:padding="@dimen/margin_sm"
          app:iiv_color="@color/text_secondary_dark"
          app:iiv_icon="faw-times"
          app:iiv_size="@dimen/icon_md"/>

      </LinearLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>